--- a/index.html
+++ b/index.html
@@ -6,11 +6,114 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First-Assignment-Repo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@1,700&family=Grape+Nuts&family=Rubik+Moonrocks&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section>
+        <div class="banner-card">
+            <img src="./donation0.jpg" alt="">
+            <div class="banner-text">
+                <h1 class="header">Lets Help Those People Who Are More In Need</h1>
+                <p class="inform">The people who are affeted by flood,we want help them any how.So whose are interested
+                    to
+                    help them
+                    pleease contact us and join our team.</p>
 
+                <a class="donate-button" href="#">Donate Now</a>
+            </div>
+            <div>
+
+    </section>
+    <section>
+        <div class="Donate-time">
+            <h1 class="main-theame">Donate Today</h1>
+            <p>There are a lots of are stare towards us.They are thniking about food,pure water and medicine.I ahve tro
+                help them to survive this product.So Whose people are want to help them ,please join with us</p>
+        </div>
+        <div class="donate-amount">
+            <ul>
+                <li>100tk</li>
+                <li class="edit">200tk</li>
+                <li>500tk</li>
+                <li>100tk</li>
+                <li>2000tk</li>
+            </ul>
+        </div>
+        <div class="other-amount">
+            <p class="undeline">other amount (taka)</p>
+            <hr>
+            <a class="donate-button" href="#">Donate Now</a>
+        </div>
+    </section>
+    <section>
+
+        <div class="donate-plan">
+            <h1 class="donate-host">Our Donate Plan</h1>
+            <p>We will sent our food product through tukk.Some person will
+                go there with tuck.After going there we need
+                help some people form there labour.</p>
+        </div>
+        <div class="flexible-container">
+            <div id="Full-Stack" class=" experience-item">
+
+
+                <h1>Food for a family</h1>
+                <p>There are a lots of people are haungry because of their natural disaster.Specially child and old
+                    persons
+                    has been affected</p>
+            </div>
+            <div id="Baby-Web" class="experience-item">
+                <h1> Shelter for a family</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda reiciendis nostrum eaque animi
+                    dolorum
+                    molestiae quo? Aspernatur iusto natus error.</p>
+            </div>
+            <div id="child-Web" class="experience-item">
+                <h1>Education for a child</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore fugiat fugit autem, obcaecati
+                    voluptates
+                    corporis totam iusto saepe nobis id!</p>
+            </div>
+        </div>
+    </section>
+    <section class="dream-big flexible-container">
+        <div class="half-width">
+            <img src="./image/my bg pic.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS.I can build any simple website.I can even teach my grandma how
+                to make simple website.My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="anchor-link2" href="#">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section>
+        <div class="updates">
+            <h1 class="get-heads">Get My Updates</h1>
+            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus ut repellat harum, quia, placeat
+                rerum
+            </p>
+
+        </div>
+        <div class="email-button">
+            <input type="email" name="" placeholder="E-mail">
+            <button>Subscribe</button>
+        </div>
+    </section>
 </body>
+<footer class="mid">
+    <h1>Be Humble</h1>
+    <p class="last">I'm gonna do it</p>
+</footer>
+
+
+
 
 </html>
