--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <section>
         <div class="banner-card">
-            <img src="./donation0.jpg" alt="">
+            <img src="./images/donation0.jpg" alt="">
             <div class="banner-text">
                 <h1 class="header">Lets Help Those People Who Are More In Need</h1>
                 <p class="inform">The people who are affeted by flood,we want help them any how.So whose are interested
@@ -70,35 +70,34 @@
             </div>
             <div id="Baby-Web" class="experience-item">
                 <h1> Shelter for a family</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda reiciendis nostrum eaque animi
-                    dolorum
-                    molestiae quo? Aspernatur iusto natus error.</p>
+                <p>You will want to have supplies ready in case a flood traps you in your house. Make sure you have 3
+                    days' worth of food and clean drinking water prepared and ready to go. Make sure that the food
+                    supplies you pick will not go bad and do not require any preparation.</p>
             </div>
             <div id="child-Web" class="experience-item">
                 <h1>Education for a child</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore fugiat fugit autem, obcaecati
-                    voluptates
-                    corporis totam iusto saepe nobis id!</p>
+                <p>Children need to be properly taught about the dangers of flooding, what to do, what not to do, and
+                    how to best keep themselves safe and alive.</p>
             </div>
         </div>
     </section>
     <section class="dream-big flexible-container">
         <div class="half-width">
-            <img src="./image/my bg pic.png" alt="">
+            <img src="./images/6666.jpg" alt="">
         </div>
         <div class="half-width">
-            <h1>Dream Big</h1>
-            <h3>Become a web developer</h3>
-            <p>I already learned the basic HTML and CSS.I can build any simple website.I can even teach my grandma how
-                to make simple website.My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="anchor-link2" href="#">DOWNLOAD RESUME</a>
+            <h1>Their lives depend on
+                your donation</h1>
+
+            <p>Donate now to provide food for hungry children. Support children NGO and make a difference. Served more
+                than 6000+ food to poor and underprivileged children</p>
+            <a class="anchor-link2" href="#">How to Contribute</a>
         </div>
     </section>
     <section>
         <div class="updates">
             <h1 class="get-heads">Get My Updates</h1>
-            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus ut repellat harum, quia, placeat
-                rerum
+            <p> Our update news are available in our facebooke page.You can be connect with us.
             </p>
 
         </div>
